<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemStoryHorizontalLayout"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:padding="8dp">
    
    <ImageView
        android:id="@+id/itemStoryHorizontalImage"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:contentDescription="@string/itemStoryHorizontalImage"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemStoryHorizontalTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:minLines="1"
        android:maxLines="3"
        android:text="@string/itemStoryHorizontalTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemStoryHorizontalImage"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/itemStoryHorizontalAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="5dp"
        android:ellipsize="end"
        android:minLines="1"
        android:maxLines="1"
        android:text="@string/itemStoryHorizontalAuthor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemStoryHorizontalImage" />

</androidx.constraintlayout.widget.ConstraintLayout>
